--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
-# web scraping
+# Note: only required if you want to run files other than solve_nyt_bee.py
+
+# web-scraper
 backoff==2.2.1
 beautifulsoup4==4.12.3
-soupsieve==2.6
-# benchmarker.py
+  soupsieve==2.6
+
+# pretty requirements.txt
+pipdeptree==2.23.4
+  packaging==24.1
+  pip==24.2
+
+# unit tests
+pytest==8.3.3
+  colorama==0.4.6
+  iniconfig==2.0.0
+  packaging==24.1
+  pluggy==1.5.0
+
+# benchmarking
 tabulate==0.9.0
